Merging from develope to main (#1515)
* Rollback jaxb-runtime until we figure out what is wrong with 4.0.6 and ignored 4.0.6 onwards from dependabot (#1510)

* Dr2 2500 allow single line comments (#1507)

* Support full line comments in export template

* added info about comment line in help

* Code simplification and grammar correction